# docs

./: .gitignore  .prettierignore  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/about/: license.md  releases.md  roadmap.md  security.md  support.md
docs/about/community/: contributing.md  covenant.md  discussions.md  insiders.md  issues.md  people.md
docs/commands/: index.md  install.md
docs/examples/: basic-services.md  basic.md  index.md  missions.md
docs/learn/: index.md
docs/learn/concepts/: applications.md  associations.md  databases.md  environment.md  fields.md  index.md  models.md  namespaces.md  packages.md  queries.md  resources.md  routes.md  runtime.md  selectors.md  services.md  settings.md  types.md
docs/learn/guides/: development.md  index.md
docs/reference/: index.md
docs/reference/api/: .meta.yml  data.md  dependencies.md  exceptions.md  index.md  managers.md  middleware.md  parameters.md  routing.md  security.md  status.md
docs/reference/core/: .meta.yml  applications.md  associations.md  config.md  environment.md  events.md  index.md  miscellaneous.md  namespaces.md  packages.md  resources.md  runtime.md  selectors.md  services.md  settings.md  specifications.md
docs/reference/database/: bulk.md  engines.md  events.md  expressions.md  index.md  managers.md  metadata.md  orm.md  pool.md  routing.md  sessions.md  types.md  utilities.md
docs/reference/schema/: .meta.yml  aliases.md  core.md  decorators.md  fields.md  index.md  miscellaneous.md  models.md
docs/reference/types/: .meta.yml  extra.md  index.md
docs/start/: features.md  first-steps.md  help.md  index.md  install.md
overrides/: 404.html  index.html  main.html
overrides/assets/javascripts/: feedback.js  header.js  mermaid.js
overrides/assets/stylesheets/: admonitions.css  animations.css  fonts.css  home.css  layout.css  palette.css  tags.css
overrides/partials/: consent.html  copyright.html  source.html
overrides/partials/integrations/analytics/: posthog.html
overrides/partials/javascripts/: consent.html
scripts/: config.py  sync.py  watch.py
src/examples/: README.md
src/examples/basic/: example.http  example.jsonl  example.py
src/examples/basic_services/: example_no_spec.http  example_no_spec.jsonl  example_no_spec.py  example_selection_spec.http  example_selection_spec.jsonl  example_selection_spec.py  example_simple_spec.http  example_simple_spec.jsonl  example_simple_spec.py
src/examples/missions/: pyproject.toml
src/examples/missions/client/: create.http  create.jsonl  delete.http  delete.jsonl  read.http  read.jsonl  update.http  update.jsonl  upsert.http  upsert.jsonl
src/examples/missions/server/: main.py  setup.py
src/start/features/: example_01.py  example_02.py  example_03.py
src/start/first-steps/: main.py  pyproject.toml  setup.py
